Added login file and fixed index styling

--- a/templates/uza_billet/index.html
+++ b/templates/uza_billet/index.html
@@ -22,7 +22,7 @@
     </head>
     <body>
         <div data-role="page" id="homePage" class="a-page">
-            <div data-role="header">
+            <div data-role="header" data-position="fixed">
                 <a href="index.html" data-icon="home">Home</a>
                 <h1>Uza Ticket</h1>
                 <a href="#" data-icon="info">Contact</a>
@@ -50,7 +50,7 @@
                     You can also <a href="#aboutPage">learn more</a> about Megacorp.
                 </p>-->
             </div>
-            <div data-role="footer">
+            <div data-role="footer" data-position="fixed">
                 
                 <h4>Copyright Uza-Ticket &copy; 2020</h4>
             </div>
