done create business front end

--- a/templates/uza_billet/index.html
+++ b/templates/uza_billet/index.html
@@ -35,12 +35,12 @@
                         votre billet de participation &agrave; un &eacute;v&ecirc;nement
                         en quelque clicks
                     </p>
-                    <h3 class="centered">Creez un compte promoteur</h3>
+                    <h3 class="centered">Cr&eacute;ez un compte promoteur</h3>
                     <div class="ui-grid-a ui-responsive">
-                        <div class="ui-block-a"><a href="#" data-role="button" data-theme="d" data-icon="user">Compte Organization</a></div>
+                        <div class="ui-block-a"><a href="{% url "create_business" %}" data-role="button" data-theme="d" data-icon="user">Compte Organization</a></div>
                         <div class="ui-block-b"><a href="#" data-role="button" data-theme="d" data-icon="user">Compte Personnel</a></div>
                     </div>
-                    <h3 class="centered">Creez un compte acheteur</h3>
+                    <h3 class="centered">Cr&eacute;ez un compte acheteur</h3>
                     <div class="ui-grid-solo">
                         <div class="ui-block-a"><a href="#" data-role="button" data-theme="d" data-icon="user">Compte Acheteur</a></div>
                     </div>
