--- a/templates/uza_billet/index.html
+++ b/templates/uza_billet/index.html
@@ -28,7 +28,7 @@
                 <a href="#" data-icon="info">Contact</a>
             </div>
             <div role="main" class="ui-content">
-                <a href="{% url "login" %}" data-role="button" data-theme="e" data-icon="action">Connectez-Vous</a>
+                <a href="{% url "rest_api:login" %}" data-role="button" data-theme="e" data-icon="action">Connectez-Vous</a>
                 <div>
                     <p class="centered">
                         Vendez les tickets de votre &eacute;v&ecirc;nement ou achetez
@@ -37,7 +37,7 @@
                     </p>
                     <h3 class="centered">Cr&eacute;ez un compte promoteur</h3>
                     <div class="ui-grid-a ui-responsive">
-                        <div class="ui-block-a"><a href="{% url "create_business" %}" data-role="button" data-theme="d" data-icon="user">Compte Organization</a></div>
+                        <div class="ui-block-a"><a href="{% url 'rest_api:business_entities' %}" data-role="button" data-theme="d" data-icon="user">Compte Organization</a></div>
                         <div class="ui-block-b"><a href="#" data-role="button" data-theme="d" data-icon="user">Compte Personnel</a></div>
                     </div>
                     <h3 class="centered">Cr&eacute;ez un compte acheteur</h3>
