--- a/templates/uza_billet/login.html
+++ b/templates/uza_billet/login.html
@@ -23,7 +23,7 @@
     <body>
         <div data-role="page" id="loginPage" class="a-page">
             <div data-role="header" data-position="fixed">
-                <a href="{% url "index" %}" data-icon="carat-l">Retour</a> 
+                <a href="{% url "uza_billet:index" %}" data-icon="carat-l">Retour</a> 
                 <h1>Uza Ticket</h1>
                 <a href="#" data-icon="info">Contact</a>
             </div>
@@ -35,7 +35,7 @@
                 </div>
                 <div data-role="fieldcontain">
                     <label for="password">Mot de Passe:</label>
-                    <input type="text" name="password" id="password" value=""  />
+                    <input type="password" name="password" id="password" value="" autocomplete="off" />
                 </div>
             </div>
             <div data-role="footer" data-position="fixed">
