completed create organization and buyer accounts

--- a/templates/uza_billet/index.html
+++ b/templates/uza_billet/index.html
@@ -42,7 +42,7 @@
                     </div>
                     <h3 class="centered">Cr&eacute;ez un compte acheteur</h3>
                     <div class="ui-grid-solo">
-                        <div class="ui-block-a"><a href="#" data-role="button" data-theme="d" data-icon="user">Compte Acheteur</a></div>
+                        <div class="ui-block-a"><a href="{% url 'rest_api:individual_buyers' %}" data-role="button" data-theme="d" data-icon="user">Compte Acheteur</a></div>
                     </div>
                 </div>
                 <!--<a href="#" data-role="button" data-theme="e" data-icon="action">Connectez-Vous</a>-->                                                                                                                                                                                                                                                                                                                                     
