--- a/templates/uza_billet/create_event.html
+++ b/templates/uza_billet/create_event.html
@@ -3,7 +3,7 @@
     {% load staticfiles %}
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>C&eacute;ez Organisation</title>
+        <title>C&eacute;ez un &Eacute;v&egrave;nement</title>
         <link rel="stylesheet" href="{% static "themes/Bootstrap.css" %}">
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <link rel="stylesheet" href="{% static "themes/jquery.mobile.icons.min.css" %}">
@@ -22,47 +22,44 @@
     </head>
     <body>
         <form action="" method="post">
-            <div data-role="page" id="business_admin" class="a-page">
+            <div data-role="page" id="event_info" class="a-page">
                 <div data-role="header" data-position="fixed">
                     <a href="{% url "uza_billet:index" %}" data-icon="carat-l">Retour</a> 
                     <h1>Uza Ticket</h1>
                     <a href="#" data-icon="info">Contact</a>
                 </div>
                 <div role="main" class="ui-content">
-                    <h2>Enregistrez le Compte Administrateur Principal</h2>
+                    <h2>D&eacute;tails de l'&eacute;v&egrave;nement</h2>
                     <div data-role="fieldcontain">
-                        <label for="first_name">Pr&eacute;nom:</label>
-                        <input type="text" name="first_name" id="first_name" value=""  />
+                        <label for="event_name">Nom:</label>
+                        <input type="text" name="event_name" id="event_name" value=""  />
                     </div>
                     <div data-role="fieldcontain">
-                        <label for="last_name">Nom:</label>
-                        <input type="text" name="last_name" id="last_name" value=""  />
+                        <label for="event_description">Description:</label>
+                        <input type="text" name="event_description" id="event_description" value=""  />
                     </div>
                     <div data-role="fieldcontain">
-                        <label for="username">Nom d'Utilisateur:</label>
-                        <input type="text" name="username" id="username" value=""  />
-                    </div>
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a">
-                            <label for="month_birth">Mois de Naissance:</label>
-                            <input type="text" name="month_birth" id="month_birth" value=""  />
-                        </div>
-                        <div class="ui-block-b">
-                            <label for="year_birth">Ann&eacute;e de Naissance:</label>
-                            <input type="text" name="year_birth" id="year_birth" value=""  />
-                        </div>
+                        <label for="price">Prix:</label>
+                        <input type="text" name="price" id="price" value=""  />
                     </div>
                     <div data-role="fieldcontain">
-                        <label for="admin_email">Courriel:</label>
-                        <input type="email" name="admin_email" id="admin_email" value=""  />
+                        <label for="sale_price">Prix Promotionnel:</label>
+                        <input type="text" name="sale_price" id="sale_price" value=""  />
                     </div>
                     <div data-role="fieldcontain">
-                        <label for="admin_phone_number">T&eacute;l&eacute;phone de l'administrateur:</label>
-                        <input type="tel" name="admin_phone_number" id="admin_phone_number" value=""  />
+                        <label for="date_sale_from">Date de l'&eacute;v&egrave;nement:</label>
+                        <!--<input type="date" class="date-input-css" id="date_sale_from" name="date_sale_from" value="">-->
+                        <input type='text' class="form-control date" id="date_event" name="date_event" value="" />
                     </div>
                     <div data-role="fieldcontain">
-                        <label for="password">Mot de Passe:</label>
-                        <input type="password" name="password" id="password" value="" autocomplete="off" />
+                        <label for="date_sale_from">D&eacute;but de Promotion:</label>
+                        <!--<input type="date" class="date-input-css" id="date_sale_from" name="date_sale_from" value="">-->
+                        <input type='text' class="form-control date" id="date_sale_from" name="date_sale_from" value="" />
+                    </div>
+                    <div data-role="fieldcontain">
+                        <label for="date_sale_to">Fin de Promotion:</label>
+                        <!--<input type="date" class="date-input-css" id="date_sale_to" name="date_sale_to">-->
+                        <input type='text' class="form-control date" id="date_sale_to" name="date_sale_to"/>
                     </div>
                     <p>
                         <div class="ui-grid-a">
@@ -72,7 +69,7 @@
                                 </a>
                             </div>
                             <div class="ui-block-b">
-                                <a data-role="button" href="#business_address">
+                                <a data-role="button" href="#event_address">
                                     Continue
                                 </a>
                             </div>
@@ -85,14 +82,14 @@
                 </div>
             </div>
 
-            <div data-role="page" id="business_address" class="a-page">
+            <div data-role="page" id="event_address" class="a-page">
                 <div data-role="header" data-position="fixed">
-                    <a href="#business_admin" data-icon="carat-l">Retour</a> 
+                    <a href="#event_info" data-icon="carat-l">Retour</a> 
                     <h1>Uza Ticket</h1>
                     <a href="#" data-icon="info">Contact</a>
                 </div>
                 <div role="main" class="ui-content">
-                    <h2>Enregistez l'adresse de la Companie</h2>
+                    <h2>Adresse de l'&eacute;v&egrave;nement</h2>
                     <div data-role="fieldcontain">
                         <label for="street">Avenue:</label>
                         <input type="text" name="street" id="street" value=""  />
@@ -115,6 +112,7 @@
                             <option>Choisissez la commune</option>
                         </select>
                     </div>
+                    
                     <p>
                         <div class="ui-grid-a">
                             <div class="ui-block-a">
@@ -123,9 +121,10 @@
                                 </a>
                             </div>
                             <div class="ui-block-b">
-                                <a data-role="button" href="#business_info">
-                                    Continue
+                                <a data-role="button" id="create_event">
+                                    Cr&eacute;ez le Compte
                                 </a>
+                                <!--<input type="submit" data-theme="b" value="Cr&eacute;ez le Compte" />-->
                             </div>
                         </div>
                     </p>
@@ -135,57 +134,24 @@
                     <h4>Copyright Uza-Ticket &copy; 2020</h4>
                 </div>
             </div>
-
-            <div data-role="page" id="business_info" class="a-page">
-                <div data-role="header" data-position="fixed">
-                    <a href="#business_address" data-icon="carat-l">Retour</a> 
-                    <h1>Uza Ticket</h1>
-                    <a href="#" data-icon="info">Contact</a>
-                </div>
-                <div role="main" class="ui-content">
-                    <h2>Enregistrez les d&eacute;tails de la Companie</h2>
-                    <div data-role="fieldcontain">
-                        <label for="business_name">Nom de la Companie:</label>
-                        <input type="text" name="business_name" id="business_name" value=""  />
-                    </div>
-                    <div data-role="fieldcontain">
-                        <label for="identification_number">Num&eacute;ro d'Identification:</label>
-                        <input type="text" name="identification_number" id="identification_number" value=""  />
-                    </div>
-                    <div data-role="fieldcontain">
-                        <label for="business_email">Courriel de la Companie:</label>
-                        <input type="text" name="business_email" id="business_email" value=""  />
-                    </div>
-                    <div data-role="fieldcontain">
-                        <label for="business_phone_number">T&eacute;l&eacute;phone de la Companie:</label>
-                        <input type="tel" name="business_phone_number" id="business_phone_number" value=""  />
-                    </div>
-                </div>
-                <p>
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a">
-                            <a data-role="button" href="{% url "uza_billet:index" %}">
-                                Cancel
-                            </a>
-                        </div>
-                        <div class="ui-block-b">
-                            <input type="submit" id="create-accnt" data-theme="b" value="C&eacute;ez le Compte" />
-                        </div>
-                    </div>
-                </p>
-            </div>
-            <div data-role="footer" data-position="fixed">
-                <h4>Copyright Uza-Ticket &copy; 2020</h4>
-            </div>
-
+            
         </form>
         
         
     </body>
 </html>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.css" rel="stylesheet"/>
+<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet"/>
+
 <script>
     $(document).ready(function() {
         console.log("DOM READY");
+        $(".date").datepicker({
+	        format: "dd/mm/yyyy"
+        });
         $.get('{% url "rest_api:regions" %}',
             function(data) {
                 //console.log(data);
@@ -233,7 +199,7 @@
                 }
             );
         });
-        $("#create-accnt").click(function(e) {
+        $("#create_event").click(function(e) {
             e.preventDefault();
             var form_data = $("form").serializeArray().reduce(
                 function(obj, item) {
@@ -242,7 +208,7 @@
             }, {});
             console.log(form_data);
             $.ajax({
-                    url: "{% url 'rest_api:business_entities' %}",
+                    url: "{% url 'rest_api:events' %}",
                     type: "post",
                     data: form_data,
                     dataType: "json",
