--- a/census/templates/census/census-household-record.html
+++ b/census/templates/census/census-household-record.html
@@ -255,8 +255,8 @@
                         <input type="text" name="last_name" id="last_name" value="" />
                     </div>
                     <div data-role="fieldcontain">
-                        <label for="head_household_link" class="select">Lien avec le Chef de M&eacute;nage:</label>
-                        <select name="head_household_link" id="head_household_link" class="head_link" data-native-menu="false">
+                        <label for="head_household_link">Lien avec le Chef de M&eacute;nage:</label>
+                        <select name="head_household_link" id="head_household_link" data-native-menu="false">
                             <option>Choisissez le lien avec le Chef de M&eacute;nage </option>
                         </select>
                     </div>
@@ -465,3 +465,69 @@
         </form>
     </body>
 </html>
+
+<script>
+
+$(document).ready(function () {
+
+{% block domready %}
+
+CensusHouseholdRecord.get_provinces_choices("select_province", "{% url 'census_api:provinces' %}");
+
+CensusHouseholdRecord.get_provinces_choices("birth_province", "{% url 'census_api:provinces' %}");
+
+// Set head household links choices for the first resident
+ResidentRecord.get_head_household_link_choices("", "{% url 'census_api:head_household_links' %}");
+
+// Set marrital status codes choices
+ResidentRecord.get_marrital_status_choices("", "{% url 'census_api:marrital_status_codes' %}");
+
+// Set marrital type choices
+ResidentRecord.get_marrital_type_choices("", "{% url 'census_api:marriage_type_codes' %}");
+
+// Set highest diploma choices
+//ResidentRecord.get_highest_diploma_choices("");
+
+// Set occupation status choices
+ResidentRecord.get_occupation_status_choices("", "{% url 'census_api:occup_status_codes' %}");
+
+// Set occupation situation choices
+ResidentRecord.get_occupation_situation_choices("", "{% url 'census_api:occup_situation_codes' %}");
+
+// Set religion choices
+ResidentRecord.get_religion_choices("", "{% url 'census_api:religion_codes' %}");
+
+// Set handicap choices
+//ResidentRecord.get_handicap_choices("");
+
+$(document).on("click", ".more_resident", function(ev) {
+        ev.preventDefault();
+        console.log("IN NEW RESIDENT INFO");
+        var resident_list = $("form").find(".resident_info");
+        var ind = resident_list.length;
+        ind++;
+        console.log("INDICE "+ ind);
+        ind = ind.toString();
+        var res_html = ResidentRecord.get_record_html(ind);
+        //console.log(res_html);
+        $("form").append(res_html);
+        $.mobile.navigate("#household_resident-"+ind);
+        if (parseInt(ind) > 1) {
+            console.log("CREATE HOUSEHOLD OPTIONS " + ind);
+            ResidentRecord.get_head_household_link_choices(ind);
+            ResidentRecord.get_marrital_status_choices(ind);
+            ResidentRecord.get_marrital_type_choices(ind);
+            ResidentRecord.get_highest_diploma_choices(ind);
+            ResidentRecord.get_occupation_status_choices(ind);
+            ResidentRecord.get_occupation_situation_choices(ind);
+            ResidentRecord.get_religion_choices(ind);
+            ResidentRecord.get_handicap_choices(ind);
+        }
+});
+
+
+{% endblock %}
+
+});
+
+</script>
