--- a/census/templates/census/census-agent-sign-up.html
+++ b/census/templates/census/census-agent-sign-up.html
@@ -21,7 +21,7 @@
                 <div data-role="header" data-theme="c">
                     <a href="" data-icon="carat-l">Retour</a>
                     <h1>R.D.C. Recensement</h1>
-                    <a href="" data-icon="info">Contact</a>
+                    <a href="{% url 'census:index' %}" data-icon="info">Contact</a>
                 </div>
                 <div role="main" class="ui-content">
                     <h2>Cr&eacute;ez votre compte Agent Recenseur</h2>
