--- a/census/templates/census/index.html
+++ b/census/templates/census/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <title>
-            R&eacute;publique D&eacute;mocratique du Congo - Recencement de la Population
+            R&eacute;publique D&eacute;mocratique du Congo - Recensement de la Population
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="{% static "census/css/themes/1/census-mobile-app.min.css" %}" rel="stylesheet" />
@@ -22,7 +22,8 @@
     <body>
         <div data-role="page">
             <div data-role="header" data-theme="c">
-                <a href="" data-icon="carat-l">Retour</a>
+                <!--<a href="" data-icon="carat-l">Retour</a>-->
+                <a href="" data-icon="home">Retour</a>
                 <h1>Recensement</h1>
                 <a href="" data-icon="info">Contact</a>
             </div>
